--- a/index.html
+++ b/index.html
@@ -8,62 +8,93 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('logo-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-      color: #1f2937;
+      background-color: #000; /* Fallback color */
+      color: #ffd700;
+      position: relative; /* For overlay positioning */
+      min-height: 100vh; /* Ensure body covers viewport */
     }
     body::before {
-      content: "";
+      content: '';
       position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.5);
-      z-index: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('background.jpg'); /* Replace with your background image path */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0.3; /* Adjust opacity for readability */
+      z-index: -1; /* Place behind content */
     }
     header {
-      position: relative;
-      background: rgba(15, 23, 42, 0.85);
-      color: white;
+      background-color: #ffd700;
+      color: #000;
       padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-      z-index: 1;
       text-align: center;
+      position: relative; /* Ensure header is above background */
     }
     header img {
       height: 80px;
-      margin-bottom: 10px;
     }
     h1 {
       margin: 10px 0 0;
       font-size: 2em;
     }
-    .specializations, .gallery, .socials, footer {
+    .welcome {
+      padding: 40px 20px;
+      background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent for readability */
+      text-align: center;
       position: relative;
-      z-index: 1;
+    }
+    .welcome h2 {
+      color: #ffd700;
+      font-size: 2.5em;
+      margin: 0 0 10px;
+    }
+    .welcome p {
+      font-size: 1.2em;
+      max-width: 600px;
+      margin: 0 auto;
     }
     .specializations {
       padding: 30px 20px;
-      background-color: rgba(226, 232, 240, 0.85);
+      background-color: rgba(17, 17, 17, 0.8); /* Semi-transparent for readability */
+      color: #ffd700;
+      position: relative; /* Ensure content is above background */
     }
     .specializations h2 {
-      color: #0f172a;
+      color: #ffd700;
       font-size: 1.5em;
     }
     .specializations ul {
       list-style: none;
       padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
     }
     .specializations li {
-      padding: 10px 0;
+      padding: 10px;
       font-size: 1.1em;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      max-width: 400px;
     }
     .specializations li::before {
       content: '➡️';
       margin-right: 10px;
-      color: #1d4ed8;
+      color: #ffd700;
+    }
+    .specializations img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 5px;
+      border: 2px solid #ffd700;
+      box-shadow: 0 2px 6px rgba(255, 215, 0, 0.5);
     }
     .gallery {
       display: flex;
@@ -71,86 +102,80 @@
       gap: 15px;
       padding: 20px;
       justify-content: center;
+      background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent for readability */
+      position: relative;
     }
     .gallery img {
       width: 300px;
       height: 200px;
       object-fit: cover;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 6px rgba(255, 215, 0, 0.5);
+      border: 2px solid #ffd700;
     }
     .socials {
       text-align: center;
       padding: 30px 10px;
+      background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent for readability */
+      position: relative;
     }
     .socials a {
       display: inline-block;
       margin: 0 10px;
       padding: 10px 20px;
-      background-color: #1d4ed8;
-      color: white;
+      background-color: #ffd700;
+      color: #000;
       text-decoration: none;
       border-radius: 25px;
       font-weight: bold;
       transition: background 0.3s;
     }
     .socials a:hover {
-      background-color: #2563eb;
+      background-color: #ff9900;
     }
     footer {
-      background-color: #0f172a;
-      color: white;
+      background-color: #ffd700;
+      color: #000;
       text-align: center;
       padding: 15px;
-    }
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        text-align: center;
-      }
-      header img {
-        margin: 0 0 10px;
-      }
+      position: relative;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="logo.png" alt="SOURCERITE FARMS Logo" />
+    <img src="logo.png" alt="SOURCERITE FARMS Logo" /> <!-- Replace with your logo filename if different -->
     <h1>SOURCERITE FARMS</h1>
   </header>
-
+  <section class="welcome">
+    <h2>Welcome to SOURCERITE FARMS</h2>
+    <p>Discover sustainable agriculture with our expertise in fish production, farm setup, and agribusiness solutions. Join us in cultivating a greener future!</p>
+  </section>
   <section class="specializations">
     <h2>We specialize in:</h2>
     <ul>
-      <li>Tilapia and catfish production</li>
-      <li>Bulk smoking/processing of fish</li>
-      <li>Farm set-up</li>
-      <li>Sales of seeds and seedlings of crops</li>
-      <li>Supply of agricultural produce</li>
-      <li>And general agribusiness solutions</li>
+      <li><img src="tilapia.jpg" alt="Tilapia Production">Tilapia and catfish production</li>
+      <li><img src="smoked-catfish-logo.png" alt="Smoked Catfish Processing">Bulk smoking/processing of fish</li> <!-- Replace with your smoked catfish logo filename if different -->
+      <li><img src="farm-setup.jpg" alt="Farm Setup">Farm set-up</li>
+      <li><img src="seedlings.jpg" alt="Seeds and Seedlings">Sales of seeds and seedlings of crops</li>
+      <li><img src="produce.jpg" alt="Agricultural Produce">Supply of agricultural produce</li>
+      <li><img src="agribusiness.jpg" alt="Agribusiness Solutions">And general agribusiness solutions</li>
     </ul>
   </section>
-
   <section class="gallery">
     <img src="tilapia.jpg" alt="Tilapia Production" />
-    <img src="smoked-fish.jpg" alt="Smoked Fish Processing" />
+    <img src="smoked-catfish-logo.png" alt="Smoked Catfish Processing" /> <!-- Replace with your smoked catfish logo filename if different -->
     <img src="farm-setup.jpg" alt="Farm Setup" />
     <img src="seedlings.jpg" alt="Seeds and Seedlings" />
     <img src="produce.jpg" alt="Agricultural Produce" />
     <img src="agribusiness.jpg" alt="Agribusiness Solutions" />
   </section>
-
   <div class="socials">
-    <a href="https://wa.me/2349061593716" target="_blank">WhatsApp</a>
     <a href="#" target="_blank">Facebook</a>
     <a href="#" target="_blank">Instagram</a>
   </div>
-
   <footer>
-    &copy; 2025 SOURCERITE FARMS. All rights reserved.
+    © 2025 SOURCERITE FARMS. All rights reserved.
   </footer>
-
 </body>
 </html>
