--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SOURCERITE FARMS</title>
   <style>
+    /* Reset and general styles */
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #ffffff;
       color: #1e3a8a;
-      position: relative;
-      min-height: 100vh;
     }
+
     body::before {
       content: '';
       position: fixed;
@@ -27,19 +31,68 @@
       opacity: 0.1;
       z-index: -1;
     }
+
+    /* SPLASH SCREEN */
+    #splash-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+      background-color: #1e3a8a;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      z-index: 9999;
+      transition: opacity 0.8s ease;
+    }
+
+    #splash-screen h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
+    #enter-btn {
+      background-color: #fff;
+      color: #1e3a8a;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    #enter-btn:hover {
+      background-color: #e0e0ff;
+      transform: scale(1.05);
+    }
+
+    /* MAIN SITE */
+    #main-content {
+      display: none;
+    }
+
     header {
       background-color: #1e3a8a;
       color: #fff;
       padding: 20px;
       text-align: center;
     }
+
     header img {
       height: 80px;
     }
+
     h1 {
       margin: 10px 0 0;
       font-size: 2em;
     }
+
     .welcome,
     .specializations,
     .gallery,
@@ -50,20 +103,23 @@
       text-align: center;
       position: relative;
     }
+
     .welcome h2 {
-      color: #1e3a8a;
       font-size: 2.5em;
       margin-bottom: 10px;
     }
+
     .welcome p {
       font-size: 1.2em;
       max-width: 600px;
       margin: 0 auto;
     }
+
     .specializations h2 {
       font-size: 1.5em;
       margin-bottom: 20px;
     }
+
     .specializations ul {
       list-style: none;
       padding: 0;
@@ -72,6 +128,7 @@
       gap: 20px;
       justify-content: center;
     }
+
     .specializations li {
       padding: 10px;
       font-size: 1.1em;
@@ -80,10 +137,8 @@
       gap: 10px;
       max-width: 400px;
     }
+
     .specializations li::before {
       content: '➡️';
       margin-right: 10px;
       color: #2563eb;
-    }
-    .specializations img {
-      width: 100px;
